<resources>
    <string name="app_name">ToDoApp</string>
    <string name="mainTitle">ToDo App</string>
    <string name="addButton">Add Task</string>
    <string name="calendarButton">Calendar</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="drawer_taskTitle">Task Type</string>

    <string name="bt_navBar_ShowTasks">Show Tasks</string>
    <string name="bt_navBar_ShowCalendar">Show Calendar</string>
    <string name="bt_navBar_AddTask">Add Task</string>

    <string name="tasks_fragment">Tasks</string>
    <string name="calendar_fragment">Calendar</string>

    <string name="personal_tasks_fragment">Personal Tasks</string>
    <string name="work_tasks_fragment">Work Tasks</string>
    <string name="school_tasks_fragment">School Tasks</string>
    <string name="add_tasks_fragment">Add Task</string>

    <string name="taskTitle">Task Title</string>
    <string name="taskStatus1">Status: TO DO</string>
    <string name="taskStatus2">Status: IN PROGRESS</string>
    <string name="taskStatus3">Status: DONE</string>
    <string name="dueDate">Due Date</string>
    <string name="description">Description</string>

    <string name="enterTitle">Enter Task Title</string>
    <string name="enterDescription">Enter Task Description</string>
    <string name="btnText">ADD</string>

    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="school">School</string>

    <string name="setDeadline">Set Date</string>
    <string name="setTime">Set Time</string>
</resources>