<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:background="@color/bdazzeld_blue">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEditTaskTitle"
        android:hint="@string/enterTitle"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/idEditTaskDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/idTypeSelector"
        android:layout_below="@+id/idEditTaskTitle"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="start|top"
        android:hint="@string/enterDescription"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idTypeSelector"
        android:layout_above="@id/idSetDate"
        android:padding="10dp"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPersonal"
            android:text="@string/personal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioWork"
            android:text="@string/work" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioSchool"
            android:text="@string/school"/>

    </RadioGroup>

    <TextView
        android:id="@+id/idSetDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/idBtn"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/setDeadline"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/idSetTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/idBtn"
        android:layout_toEndOf="@id/idSetDate"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/setTime"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idBtn"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/btnText"
        android:textAllCaps="false"
        android:background="@drawable/add_button"
        />

</RelativeLayout>